[build-system]
requires = ["setuptools>=82.0.1", "wheel>=0.46.3"]
build-backend = "setuptools.build_meta"

[project]
name = "ecp-lib"
version = "0.1.0"
description = "RSA/ECP utilities with Django authentication backend integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.6",
]

[project.optional-dependencies]
django = [
    "django>=4.2,<6.0",
]

[tool.setuptools.packages.find]
include = ["ecp_lib*"]
