[build-system]
requires = ["setuptools>=82.0.1", "wheel>=0.46.3"]
build-backend = "setuptools.build_meta"

[project]
name = "ecp-lib"
version = "1.0.1"
description = "Django RSA private-key authentication helpers and middleware"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "toksik" },
]
keywords = ["django", "rsa", "authentication", "middleware", "pem", "cryptography"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "cryptography>=46.0.6",
]

[project.urls]
Homepage = "https://github.com/toksik/django-pub-sub"
Repository = "https://github.com/toksik/django-pub-sub"
Issues = "https://github.com/toksik/django-pub-sub/issues"

[project.optional-dependencies]
django = [
    "django>=4.2,<6.0",
]

[tool.setuptools.packages.find]
include = ["ecp_lib*"]
